--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
                 <br>
                 <h2>5.Pagina Personal</h2>
+
+                <br>
+                <h2>EXAMEN PARCIAL 1</h2>
             </article>
             <aside>
                 <a href="02HTML/indice.html">Practica 1</a>
@@ -48,12 +51,16 @@
                 <br>
                 <h4>Proximamente!!!</h4>
                 <br>
+                <br>
+                <a href="Examen_Practico1/examen.html">Examen1</a>
             </aside>
 
         </section>
         <br>
         <footer>
             <h3>Pongame 10 porfa   D:</h3>
+            <br>
+            <h3>Quien sabe porque ya no me dejo subir archivos al otro repo asi que hice otro</h3>
         </footer>
     </div>
     </body>
