--- a/05Formulario/formulario.html
+++ b/05Formulario/formulario.html
@@ -34,5 +34,8 @@
         <input type="reset" name="borrar" value="Borar Datos">
     </form>
 
+    <br>
+    <a href="../index.html">Regresar a Principal</a>
+
 </body>
 </html>
