--- a/index.html
+++ b/index.html
@@ -31,10 +31,19 @@
                 <h2>4.Curriculo</h2>
 
                 <br>
-                <h2>5.Pagina Personal</h2>
+                <h2>5.1.Pagina Personal</h2>
 
                 <br>
                 <h2>EXAMEN PARCIAL 1</h2>
+
+                <br>
+                <h2>5.2.Formulario</h2>
+
+                <br>
+                <h2>6.JavaScript</h2>
+
+                <br>
+                <h2>7. Algoritmia</h2>
             </article>
             <aside>
                 <a href="02HTML/indice.html">Practica 1</a>
@@ -51,8 +60,18 @@
                 <br>
                 <h4>Proximamente!!!</h4>
                 <br>
-                <br>
                 <a href="Examen_Practico1/examen.html">Examen1</a>
+                <br>
+                <br>
+                <a href="05Formulario/formulario.html">Practica 5.2</a>
+                <br>
+                <br>
+                <a href="06JavaScript/Ejercicios.html">Practica 6</a>
+                <br>
+                <br>
+                <a href="07AlgoritmiaJS/algoritmia.html">Practica 7</a>
+                <br>
+                <br>
             </aside>
 
         </section>
