Practicas PSW Now Its Personal

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 
                 <br>
                 <h2>7. Algoritmia</h2>
+
+                <br>
+                <h2>8. Rompecabezas</h2>
             </article>
             <aside>
                 <a href="02HTML/indice.html">Practica 1</a>
@@ -70,6 +73,9 @@
                 <br>
                 <br>
                 <a href="07AlgoritmiaJS/algoritmia.html">Practica 7</a>
+                <br>
+                <br>
+                <a href="08Rompecabezas/rompecabezas.html">Practica 8</a>
                 <br>
                 <br>
             </aside>
