Practicas PSW Revenge

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 
                 <br>
                 <h2>8. Rompecabezas</h2>
+
+                <br>
+                <h2>9. EjerciciosJS</h2>
             </article>
             <aside>
                 <a href="02HTML/indice.html">Practica 1</a>
@@ -76,6 +79,9 @@
                 <br>
                 <br>
                 <a href="08Rompecabezas/rompecabezas.html">Practica 8</a>
+                <br>
+                <br>
+                <a href="09EjerciciosJS/ejercicios.html">Practica 9</a>
                 <br>
                 <br>
             </aside>
