--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 
                 <br>
                 <h2>9. EjerciciosJS</h2>
+
+                <br>
+                <h2>EXAMEN PARCIAL 2</h2>
             </article>
             <aside>
                 <a href="02HTML/indice.html">Practica 1</a>
@@ -82,6 +85,9 @@
                 <br>
                 <br>
                 <a href="09EjerciciosJS/ejercicios.html">Practica 9</a>
+                <br>
+                <br>
+                <a href="Examen 2A/web/index.html">Practica 9</a>
                 <br>
                 <br>
             </aside>
